[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/menus/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://resources/menus/main_menu/Images/BackgroundWallaper.jpg" type="Texture" id=2]
[ext_resource path="res://resources/menus/main_menu/Images/Logo.png" type="Texture" id=3]
[ext_resource path="res://resources/menus/main_menu/PlayfairDisplay-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/menus/main_menu/about.gd" type="Script" id=5]
[ext_resource path="res://resources/sfx/background music/main menu.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/menus/settings_menu/settings_menu.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_top = 10
extra_spacing_bottom = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
modulate = Color( 0.961182, 0.96875, 0.965912, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0, 0.742188, 0.0115967, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1000.0
margin_bottom = 321.0
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color( 0.0181274, 0.773438, 0.277765, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -443.0
margin_right = 495.0
margin_bottom = 443.0
grow_vertical = 0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="BtnStart" type="Button" parent="VBoxContainer"]
light_mask = 31775
margin_top = 168.0
margin_right = 495.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.960938, 0.923401, 0.923401, 1 )
custom_colors/font_color = Color( 0.972656, 0.94986, 0.94986, 1 )
custom_colors/font_color_hover = Color( 0.949219, 0.897308, 0.897308, 1 )
custom_colors/font_color_pressed = Color( 0.972656, 0.930862, 0.930862, 1 )
text = "New Game"
flat = true

[node name="BtnOptions" type="Button" parent="VBoxContainer"]
light_mask = 31775
margin_top = 282.0
margin_right = 495.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.960938, 0.923401, 0.923401, 1 )
custom_colors/font_color = Color( 0.972656, 0.94986, 0.94986, 1 )
custom_colors/font_color_hover = Color( 0.949219, 0.897308, 0.897308, 1 )
custom_colors/font_color_pressed = Color( 0.972656, 0.930862, 0.930862, 1 )
text = "Options"
flat = true

[node name="BtnHelp" type="Button" parent="VBoxContainer"]
light_mask = 31775
margin_top = 396.0
margin_right = 495.0
margin_bottom = 490.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.960938, 0.923401, 0.923401, 1 )
custom_colors/font_color = Color( 0.972656, 0.94986, 0.94986, 1 )
custom_colors/font_color_hover = Color( 0.949219, 0.897308, 0.897308, 1 )
custom_colors/font_color_pressed = Color( 0.972656, 0.930862, 0.930862, 1 )
text = "Help"
flat = true

[node name="BtnAbout" type="Button" parent="VBoxContainer"]
light_mask = 31775
margin_top = 510.0
margin_right = 495.0
margin_bottom = 604.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.960938, 0.923401, 0.923401, 1 )
custom_colors/font_color = Color( 0.972656, 0.94986, 0.94986, 1 )
custom_colors/font_color_hover = Color( 0.949219, 0.897308, 0.897308, 1 )
custom_colors/font_color_pressed = Color( 0.972656, 0.930862, 0.930862, 1 )
text = "About"
flat = true

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
light_mask = 31775
margin_top = 624.0
margin_right = 495.0
margin_bottom = 718.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.960938, 0.923401, 0.923401, 1 )
custom_colors/font_color = Color( 0.972656, 0.94986, 0.94986, 1 )
custom_colors/font_color_hover = Color( 0.949219, 0.897308, 0.897308, 1 )
custom_colors/font_color_pressed = Color( 0.972656, 0.930862, 0.930862, 1 )
text = "Quit"
flat = true

[node name="AboutUs" type="PopupMenu" parent="."]
modulate = Color( 0.941406, 0.90831, 0.90831, 1 )
margin_left = 708.0
margin_top = 172.0
margin_right = 1274.0
margin_bottom = 793.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Background" type="Panel" parent="AboutUs"]
self_modulate = Color( 0.957031, 0.934601, 0.934601, 1 )

[node name="RichTextLabel" type="Label" parent="AboutUs"]
margin_left = 33.0
margin_top = 35.0
margin_right = 508.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Fractured Knight is a medieval-space themed adventure game that incorporates text-based interaction and has a combat system that takes heavy influence from Pok√©mon!"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="AboutUs"]
margin_left = 144.0
margin_top = 524.0
margin_right = 408.0
margin_bottom = 582.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.636719, 0.104462, 0.104462, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Close"
flat = true

[node name="Help" type="PopupMenu" parent="."]
modulate = Color( 0.941406, 0.90831, 0.90831, 1 )
margin_left = 670.0
margin_top = 267.0
margin_right = 1231.0
margin_bottom = 898.0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Background" type="Panel" parent="Help"]
self_modulate = Color( 0.957031, 0.934601, 0.934601, 1 )

[node name="RichTextLabel" type="Label" parent="Help"]
margin_left = 29.0
margin_top = -1.0
margin_right = 504.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "HELP

CONTROL:
PRESS [W] to move player up
PRESS [A] to move left
PRESS [S] to move down
PRESS [D] to move right

PAUSE:
PRESS [ESC] to pause game 

DIALOUGE:
PRESS [E] to start talking
PRESS [SPACE] to go to next dialouge"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="Help"]
margin_left = 137.0
margin_top = 562.0
margin_right = 401.0
margin_bottom = 620.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.636719, 0.104462, 0.104462, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Close"
flat = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="SettingsMenu" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="VBoxContainer/BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnOptions" to="." method="_on_BtnOptions_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnHelp" to="." method="_on_BtnHelp_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnAbout" to="." method="_on_BtnAbout_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="pressed" from="AboutUs/Button" to="AboutUs" method="_on_Button_pressed"]
[connection signal="pressed" from="Help/Button" to="Help" method="_on_Button_pressed"]
